--- a/per_course_demographics_draft.ipynb
+++ b/per_course_demographics_draft.ipynb
@@ -538,9 +538,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(60, 18)\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -750,13 +757,14 @@
        "4  Introductory  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df_f23['CourseLevel'] = df_f23['courseID'].apply(categorize_course)\n",
+    "print(df_f23.shape)\n",
     "df_f23.head()"
    ]
   },
@@ -1029,9 +1037,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(60, 18)\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -1241,7 +1256,7 @@
        "4  Introductory  "
       ]
      },
-     "execution_count": 61,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1251,14 +1266,22 @@
     "CourseLevel_order = ['Introductory', 'Intermediate', 'Advanced', 'Grad']\n",
     "df_f23['CourseLevel'] = pd.Categorical(df_f23['CourseLevel'], categories=CourseLevel_order, ordered=True)\n",
     "df_f23 = df_f23.sort_values('CourseLevel')\n",
+    "print(df_f23.shape)\n",
     "df_f23.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(240, 15)\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -1503,7 +1526,7 @@
        "             CSCI0112 S01                               25  "
       ]
      },
-     "execution_count": 62,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1511,6 +1534,7 @@
    "source": [
     "df_f23_percent = df_f23.copy().drop(['courseID'], axis=1) # drop the courseID which is used for calculation\n",
     "df_f23_percent = df_f23_percent.groupby(['CourseLevel', 'CourseName']).sum()\n",
+    "print(df_f23_percent.shape)\n",
     "df_f23_percent.head()"
    ]
   },
@@ -1774,6 +1798,41 @@
     "    if column != 'Race/Ethnicity Total Enrollment':\n",
     "        df_f23_percent[column] = ((df_f23_percent[column] / df_f23_percent['Race/Ethnicity Total Enrollment']) * 100).round(2)\n",
     "df_f23_percent.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(240, 15)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df_f23_percent.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/kathywu/opt/anaconda3/envs/data1030/lib/python3.11/site-packages/pandas/core/internals/blocks.py:2538: RuntimeWarning: invalid value encountered in cast\n",
+      "  values = values.astype(str)\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_f23_percent.to_csv('results/demographic.csv', index=True)"
    ]
   },
   {
